--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 body {
-    color: white;
-    background: black;
+    color: rgb(225, 23, 23);
+    background: rgb(128, 130, 255);
     margin: 0px;
     font-family: "Chakra Petch", sans-serif;
     margin-bottom: 100px;
 }
 
 header {
-    border-bottom: solid 2px rgb(42, 122, 228);
+    border-bottom: solid 2px rgb(240, 203, 67);
     padding: 20px;
     font-size: 32px;
     color: rgb(42, 122, 228);
